Bug 799335. Rename nsStyleImage::RequestDecode to StartDecoding. r=dholbert

Now that RequestDecode call StartDecoding this make more sense.

--HG--
extra : rebase_source : ded757b8c90cbc4e5d221c79d2704105e1051183